Standardisera objekt-ID för T-Berg D&U
